--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     },
     "homepage": "https://github.com/Kademi/keditor#readme",
     "devDependencies": {
+        "@babel/cli": "^7.14.8",
         "@babel/core": "^7.10.3",
         "@babel/plugin-proposal-class-properties": "^7.10.1",
         "@babel/plugin-proposal-export-default-from": "^7.10.1",
-        "@babel/preset-env": "^7.10.3",
+        "@babel/preset-env": "^7.15.0",
         "babel-loader": "^8.1.0",
         "css-loader": "^3.6.0",
         "file-loader": "^6.0.0",
